--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/jest": "^24.0.12",
     "gts": "^1.0.0",
     "jest": "^24.8.0",
+    "prettier": "^1.17.0",
     "ts-jest": "^24.0.2",
     "typescript": "~3.4.0"
   },
@@ -20,7 +21,7 @@
     "check": "gts check",
     "clean": "gts clean",
     "compile": "tsc -p .",
-    "fix": "gts fix",
+    "fix": "gts fix && prettier '**/*.ts' --write",
     "test": "jest -c jest.config.js"
   }
 }
