--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^24.0.12",
+    "@types/node": "^12.0.0",
     "gts": "^1.0.0",
     "jest": "^24.8.0",
     "prettier": "^1.17.0",
