--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/jest": "^24.0.12",
     "@types/node": "^12.0.0",
+    "benchmarkjs": "^0.1.8",
     "gts": "^1.0.0",
     "jest": "^24.8.0",
     "prettier": "^1.17.0",
@@ -23,6 +24,7 @@
     "clean": "gts clean",
     "compile": "tsc -p .",
     "fix": "gts fix && prettier 'src/*.ts' 'tests/*.ts' --write",
-    "test": "jest -c jest.config.js"
+    "test": "jest -c jest.config.js",
+    "benchmarks": "node benchmarks/deque.js"
   }
 }
