--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/jest": "^24.0.12",
     "@types/node": "^12.0.0",
     "benchmarkjs": "^0.1.8",
+    "concurrently": "^4.1.0",
     "gts": "^1.0.0",
     "jest": "^24.8.0",
     "prettier": "^1.17.0",
@@ -25,6 +26,6 @@
     "compile": "tsc -p .",
     "fix": "gts fix && prettier 'src/*.ts' 'tests/*.ts' --write",
     "test": "jest -c jest.config.js",
-    "benchmarks": "node benchmarks/deque.js"
+    "benchmarks": "concurrently 'node benchmarks/deque-vs-array-shift.js' 'node benchmarks/deque-vs-array-unshift.js'"
   }
 }
